--- a/temple/index.html
+++ b/temple/index.html
@@ -44,10 +44,10 @@
                         <a href="./">Home</a>
                     </li>
                     <li>
-                        <a href="#">Temples</a>
+                        <a href="./temples.html">Temples</a>
                     </li>
                     <li>
-                        <a href="#">Reservation</a>
+                        <a href="./reservation.html">Reservation</a>
                     </li>
                     <li class="sub-menu">
                         <a href="#">Services</a>
@@ -166,10 +166,10 @@
                     <a href="./">Home</a>
                 </li>
                 <li>
-                    <a href="#">Temples</a>
+                    <a href="./temples.html">Temples</a>
                 </li>
                 <li>
-                    <a href="#">Reservation</a>
+                    <a href="./reservation.html">Reservation</a>
                 </li>
                 <li >
                     <a href="#">Services</a>
@@ -186,6 +186,10 @@
         <div>
             <p>Don't wait more...</p>
             <a class="btn" href="#">Book Now</a>
+            <br><br>
+            <hr>
+            <p>4800 Montgomery Ln #300, Bethesda, MD 20814 </p>
+            <a href="https://www.google.com/maps/place/4800+Montgomery+Ln+%23300,+Bethesda,+MD+20814,+EE.+UU./@38.9832851,-77.0978278,17z/data=!4m5!3m4!1s0x89b7c97b6b8f21f1:0x9a0b3cde14da0a60!8m2!3d38.9832518!4d-77.0955318" target="blank"><small> ↠ 📍  Location Map</small></a>
         </div>
         <div>
             <p class="copy">© <span id="year">2022</span> Temple Inn & Suites .:|:. Miguel Prot .:|:. <br> <small>Last Updated: <span id="fullDate"></span></small></p>
