--- a/temple/thankyou.html
+++ b/temple/thankyou.html
@@ -40,7 +40,7 @@
             </div>
             <div class="menu">
                 <ul class="menu-items">
-                    <li class="selected">
+                    <li>
                         <a href="./">Home</a>
                     </li>
                     <li>
@@ -64,8 +64,10 @@
         </nav>
     </header>
 
-    <main>
-        <!-- page_content -->
+    <main class="padding-top text-center">
+        <h1 class="text-center">Thanks for your message!</h1>
+        <a href="./index.html" class="btn m-center">Return to Home</a>
+        <br><br>
     </main>
 
     <footer>
