--- a/temple/temples.html
+++ b/temple/temples.html
@@ -40,10 +40,10 @@
             </div>
             <div class="menu">
                 <ul class="menu-items">
-                    <li class="selected">
+                    <li>
                         <a href="./">Home</a>
                     </li>
-                    <li>
+                    <li class="selected">
                         <a href="./temples.html">Temples</a>
                     </li>
                     <li>
@@ -64,8 +64,9 @@
         </nav>
     </header>
 
-    <main>
-        <!-- page_content -->
+    <main class="padding-top">
+        <h1 class="text-center">Temple Items</h1>
+        <div class="cards"></div>
     </main>
 
     <footer>
@@ -110,5 +111,6 @@
     </footer>
 
     <script src="./js/general.js"></script>
+    <script src="./js/temples.js"></script>
 </body>
 </html>
