--- a/temple/index.html
+++ b/temple/index.html
@@ -50,14 +50,14 @@
                         <a href="./reservation.html">Reservation</a>
                     </li>
                     <li class="sub-menu">
-                        <a href="#">Services</a>
+                        <a href="./services.html">Services</a>
                         <ul class="sub-items">
                             <li><a href="#">Reception</a></li>
                             <li><a href="#">Full-time Temple Missionary</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -172,14 +172,14 @@
                     <a href="./reservation.html">Reservation</a>
                 </li>
                 <li >
-                    <a href="#">Services</a>
+                    <a href="./services.html">Services</a>
                     <ul>
                         <li class="text-center"><a href="#">Reception</a></li>
                         <li class="text-center"><a href="#">Full-time Temple Missionary</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
         </div>
