--- a/temple/services.html
+++ b/temple/services.html
@@ -49,7 +49,7 @@
                     <li>
                         <a href="./reservation.html">Reservation</a>
                     </li>
-                    <li class="sub-menu">
+                    <li class="sub-menu selected">
                         <a href="./services.html">Services</a>
                         <ul class="sub-items">
                             <li><a href="#">Reception</a></li>
@@ -64,10 +64,29 @@
         </nav>
     </header>
 
-    <main class="padding-top text-center">
-        <h1 class="text-center">Thanks for your message!</h1>
-        <a href="./index.html" class="btn m-center">Return to Home</a>
-        <br><br>
+    <main class="padding-top padding-sides">
+        <h1 class="text-center">Services</h1>
+        <h3>Specialized Services</h3>
+        <ul class="list">
+            <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
+            <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+            <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+            <li>Temple history themed reception and sitting area</li>
+            <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+            <li>A family search center that supports family search and ordinance work</li>
+        </ul>
+        
+        <h3>Free Amenities</h3>
+        <ul class="list">
+            <li>Breakfast</li>
+            <li>Exercise/workout room</li>
+            <li>Indoor pool</li>
+            <li>WiFi high-speed internet access and smart TVs</li>
+            <li>Parking</li>
+            <li>Temple shuttle</li>
+            <li>Family history consultation and family ordinance card service</li>
+        </ul>
+
     </main>
 
     <footer>
