--- a/temple/temples.html
+++ b/temple/temples.html
@@ -50,14 +50,14 @@
                         <a href="./reservation.html">Reservation</a>
                     </li>
                     <li class="sub-menu">
-                        <a href="#">Services</a>
+                        <a href="./services.html">Services</a>
                         <ul class="sub-items">
                             <li><a href="#">Reception</a></li>
                             <li><a href="#">Full-time Temple Missionary</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -65,8 +65,9 @@
     </header>
 
     <main class="padding-top">
-        <h1 class="text-center">Temple Items</h1>
+        <h1 class="text-center">Temples</h1>
         <div class="cards"></div>
+        <a href="javascript:clearFavorites()">Clear Favorites</a>
     </main>
 
     <footer>
@@ -86,14 +87,14 @@
                     <a href="./reservation.html">Reservation</a>
                 </li>
                 <li >
-                    <a href="#">Services</a>
+                    <a href="./services.html">Services</a>
                     <ul>
                         <li class="text-center"><a href="#">Reception</a></li>
                         <li class="text-center"><a href="#">Full-time Temple Missionary</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
         </div>
