--- a/temple/contact.html
+++ b/temple/contact.html
@@ -52,8 +52,8 @@
                     <li class="sub-menu">
                         <a href="./services.html">Services</a>
                         <ul class="sub-items">
-                            <li><a href="#">Reception</a></li>
-                            <li><a href="#">Full-time Temple Missionary</a></li>
+                            <li><a href="./reception.html">Reception</a></li>
+                            <li><a href="./full-time.html">Full-time Temple Missionary</a></li>
                         </ul>
                     </li>
                     <li class="selected">
