--- a/temple/full-time.html
+++ b/temple/full-time.html
@@ -65,8 +65,8 @@
     </header>
 
     <main class="padding-top padding-sides">
-        <h1 class="text-center">Services</h1>
-        <h3>Specialized Services</h3>
+        <h1 class="text-center">Full Time</h1>
+        
         <ul class="list">
             <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
             <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
