--- a/temple/full-time.html
+++ b/temple/full-time.html
@@ -52,7 +52,7 @@
                     <li class="sub-menu selected">
                         <a href="./services.html">Services</a>
                         <ul class="sub-items">
-                            <li><a href="./reception.html">Reception</a></li>
+                            <li class="selected"><a href="./reception.html">Reception</a></li>
                             <li><a href="./full-time.html">Full-time Temple Missionary</a></li>
                         </ul>
                     </li>
